# worldcoincontest

./: .gitignore  Cargo.toml  OPTIMIZATIONS.md  README.md  calculate_max.py  config.toml  results_old.json
.cargo/: config.toml
src/: main.rs
util/: benchmark.sh  calculate_score.py  comprehensive_test  comprehensive_test.rs  score_from_json.py  test_coords_rust  test_coords_rust.rs  test_exact_coords.json  test_rust_coords.txt  test_score.py  verify_exact.py  verify_known.py  verify_precompute  verify_precompute.rs
