[package]
name = "orb-optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.16"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

